--- a/ux.html
+++ b/ux.html
@@ -49,7 +49,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/watermark/jobs/ux-intern-dUqsyMRWCr6BECaKld2Sj6'>UX Intern #0079 job at Watermark in Milwaukee, WI, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/watermark/jobs/ux-intern-dUqsyMRWCr6BECaKld2Sj6'>UX Intern #0079 job at Watermark in Milwaukee, WI, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -85,7 +85,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692176926-senior-web-application-developer-ui-ux-developer'>Arthur Grand Technologies Inc Senior Web Application Developer / UI/UX Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692176926-senior-web-application-developer-ui-ux-developer'>Arthur Grand Technologies Inc Senior Web Application Developer / UI/UX Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -97,7 +97,7 @@
 <p><span class="badge badge-light">Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/brandwatch/job/o33DafwD'>Brandwatch Careers - Product/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/brandwatch/job/o33DafwD'>Brandwatch Careers - Product/UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -245,11 +245,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/clearpoint/job/57337idqnkhgx6b38dnurst8ah'>UX Architect | My Crelate Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/clearpoint/job/57337idqnkhgx6b38dnurst8ah'>UX Architect | My Crelate Portal</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e'>UX Architect | My Crelate Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e'>UX Architect | My Crelate Portal</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -316,11 +316,11 @@ for candidates with solid technical foundations and a desire to continue learnin
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/withme.health/7900a5b8-d560-4f44-b0d3-02ee510eeddf'>WithMe Health - UX/UI Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/withme.health/7900a5b8-d560-4f44-b0d3-02ee510eeddf'>WithMe Health - UX/UI Designer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://suxxeed.join.com/jobs/252903-traineeprogramm-zum-vertriebsspezialist-m-w'>Job @ SUXXEED (N?rnberg): TRAINEEPROGRAMM ZUM VERT ...</a></h5> 
+<h5><a href='https://suxxeed.join.com/jobs/252903-traineeprogramm-zum-vertriebsspezialist-m-w'>Job @ SUXXEED (N?rnberg): TRAINEEPROGRAMM ZUM VERT ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 6 Tagen ... SUXXEED GmbH has a job opening for TRAINEEPROGRAMM ZUM 
 VERTRIEBSSPEZIALIST (M/W) in N?rnberg (published: 28.09.2018). Apply now 
@@ -354,7 +354,7 @@ or check?...</p>
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://santoranakama.applytojob.com/apply/Me5Lzyz3i7/Mobile-And-Web-UIUX-Designer-Panya-Studios'>Mobile and Web UI/UX Designer | Panya Studios - Santora Nakama - Career Page</a></h5> 
+<h5><a href='http://santoranakama.applytojob.com/apply/Me5Lzyz3i7/Mobile-And-Web-UIUX-Designer-Panya-Studios'>Mobile and Web UI/UX Designer | Panya Studios - Santora Nakama - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -392,7 +392,7 @@ data?...</p>
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/pac-12-networks/job/o1qBafwW'>Pac-12 Networks Careers - UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/pac-12-networks/job/o1qBafwW'>Pac-12 Networks Careers - UX Designer</a></h5> 
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -405,7 +405,7 @@ data?...</p>
 <p>1 day ago ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MastersIndiaPrivateLimited/743999691924764-ui-ux-designer'>Masters India Private Limited UI/UX Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MastersIndiaPrivateLimited/743999691924764-ui-ux-designer'>Masters India Private Limited UI/UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Noida</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -425,7 +425,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://bridgemaker.join.com/jobs/253674-product-designer-ux-and-ui-m-w-d-uptodate'>Product Designer UX & ... | JOIN - Job @ Bridgemaker (Munich)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bridgemaker.join.com/jobs/253674-product-designer-ux-and-ui-m-w-d-uptodate'>Product Designer UX & ... | JOIN - Job @ Bridgemaker (Munich)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>11. Juli 2019 ... Bridgemaker GmbH has a job opening for Product Designer UX & UI (m/w/d) - 
 uptodate in Munich (published: 15.07.2019). Apply now or check the other?...</p>
@@ -476,7 +476,7 @@ uptodate in Munich (published: 15.07.2019). Apply now or check the other?...</p>
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
